--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 PyJWT==1.7.1
 pytz==2020.1
+django-crispy-forms
+django-mathfilters
+requests
